--- a/moda.html
+++ b/moda.html
@@ -7,7 +7,7 @@
     <title>Moda</title>
 </head>
 <body>
-    <h1>Mediana</h1>
+    <h1>Moda</h1>
     <script src="moda.js"></script>
 </body>
 </html>
